--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'io.realm:android-adapters:3.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
