--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MarkerSetActivity"></activity>
+        <activity android:name=".PictureDetailActivity"></activity>
+        <activity android:name=".MarkerSetActivity" />
         <activity android:name=".ListActivity" />
         <activity android:name=".AddActivity" />
 
