--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.mymap"
+        applicationId "shintaro.mymap"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
